--- a/Data-Analysis-E-Commerce.ipynb
+++ b/Data-Analysis-E-Commerce.ipynb
@@ -51,23 +51,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'geopandas'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m       \u001b[38;5;66;03m# Untuk manipulasi data\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m        \u001b[38;5;66;03m# Untuk operasi numerik\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgeopandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgpd\u001b[39;00m   \u001b[38;5;66;03m# Untuk analisis geospasial\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgdown\u001b[39;00m             \u001b[38;5;66;03m# Untuk mengunduh file dari Google Drive (opsional)\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m  \u001b[38;5;66;03m# Untuk visualisasi data\u001b[39;00m\n",
-            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'geopandas'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd       # Untuk manipulasi data\n",
         "import numpy as np        # Untuk operasi numerik\n",
@@ -77,24 +65,6 @@
         "import seaborn as sns     # Untuk visualisasi yang lebih menarik\n",
         "from shapely.geometry import Point  # Untuk konversi ke GeoDataFrame"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "NeTEKJyriCdK"
-      },
-      "outputs": [
-        {
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (2744202984.py, line 1)",
-          "output_type": "error",
-          "traceback": [
-            "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mpip intall geopandas\u001b[39m\n        ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
-          ]
-        }
-      ],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -1179,7 +1149,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "env",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -1193,7 +1163,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.6"
+      "version": "3.10.8"
     },
     "orig_nbformat": 4
   },
